# zed

./: Cargo.toml
.github/workflows/: deploy_web_examples.yml  release_flatpak.yml
assets/keymaps/: default-linux.json  default-macos.json
crates/askpass/src/: askpass.rs  wasm.rs
crates/assets/src/: assets.rs
crates/buffer_diff/: Cargo.toml
crates/buffer_diff/src/: buffer_diff.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  telemetry_wasm.rs  user.rs  wasm.rs
crates/clock/: Cargo.toml
crates/clock/src/: system_clock.rs
crates/cloud_api_client/: Cargo.toml
crates/cloud_api_client/src/: cloud_api_client.rs
crates/context_server/: Cargo.toml
crates/context_server/src/transport/: stdio_transport.rs
crates/dap/: Cargo.toml
crates/dap/src/: adapters.rs
crates/db/: Cargo.toml
crates/db/src/: db.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  display_map.rs  editor.rs  editor_native_impl.rs  element.rs  scroll.rs  selections_collection.rs  wasm.rs
crates/editor/src/display_map/: wrap_map.rs
crates/extension/src/wasm_host/wit/: since_v0_0_7.rs
crates/extensions_ui/src/: download_permission.rs
crates/fs/: Cargo.toml
crates/fs/src/: fake_git_repo.rs  fs.rs
crates/git/: Cargo.toml
crates/git/src/: blame.rs  blame_wasm.rs  commit_wasm.rs  git.rs  native.rs  repository.rs  repository_wasm.rs  wasm.rs
crates/gpui/: Cargo.toml
crates/gpui/examples/: defer.rs  file_picker.rs  input.rs  shader.rs
crates/gpui/src/: app.rs  gpui.rs  platform.rs  platform_scheduler.rs  scene.rs  style.rs  styled.rs  taffy.rs  text_system.rs  window.rs
crates/gpui/src/elements/: div.rs  mod.rs  shader.rs  text.rs
crates/gpui/src/platform/: shader.rs
crates/gpui/src/platform/blade/: blade_renderer.rs
crates/gpui/src/platform/linux/: platform.rs  text_system.rs
crates/gpui/src/platform/linux/wayland/: window.rs
crates/gpui/src/platform/mac/: metal_renderer.rs
crates/gpui/src/platform/test/: window.rs
crates/gpui/src/platform/windows/: directx_renderer.rs  window.rs
crates/gpui/src/text_system/: line.rs  line_layout.rs  line_wrapper.rs
crates/gpui_blade/: Cargo.toml
crates/gpui_core/: Cargo.toml
crates/gpui_linux/src/linux/wayland/: window.rs
crates/gpui_linux/src/linux/x11/: window.rs
crates/gpui_macos/: Cargo.toml
crates/gpui_macros/src/: gpui_macros.rs  styles.rs
crates/gpui_platform/src/: gpui_platform.rs
crates/gpui_wayland/: Cargo.toml
crates/gpui_web/: Cargo.toml
crates/gpui_web/src/: events.rs  gpui_web.rs  platform.rs  window.rs
crates/gpui_wgpu/src/: wgpu_renderer.rs
crates/gpui_windows/: Cargo.toml
crates/gpui_x11/: Cargo.toml
crates/http_client/src/: http_client.rs
crates/language/: Cargo.toml
crates/language/src/: buffer.rs  language.rs  language_registry.rs  syntax_map.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lsp.rs  lsp_native_impl.rs  wasm.rs
crates/migrator/: Cargo.toml
crates/migrator/src/: native.rs  wasm.rs
crates/multi_buffer/: Cargo.toml
crates/multi_buffer/src/: transaction.rs
crates/net/src/: net.rs
crates/node_runtime/: Cargo.toml
crates/node_runtime/src/: node_runtime.rs
crates/project/: Cargo.toml
crates/project/src/: agent_registry_store.rs  agent_server_store.rs  buffer_store.rs  environment.rs  git_store.rs  lsp_store.rs  project.rs  project_native_impl.rs  project_search.rs  project_settings.rs  terminals_wasm.rs  wasm.rs
crates/project/src/debugger/locators/: cargo.rs
crates/project_panel/: Cargo.toml
crates/project_panel/src/: project_panel.rs
crates/repl/src/outputs/: table.rs
crates/settings/src/: vscode_import.rs
crates/settings_json/: Cargo.toml
crates/settings_json/src/: wasm.rs
crates/sqlez/: Cargo.toml
crates/sqlez/src/: connection.rs  domain.rs  lib.rs  migrations.rs  savepoint.rs  statement.rs  thread_safe_connection.rs  typed_statements.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: terminal.rs
crates/terminal_view/src/: terminal_element.rs  terminal_view.rs
crates/text/: Cargo.toml
crates/text/src/: text.rs
crates/theme/: Cargo.toml
crates/theme/src/: font_family_cache.rs
crates/ui/: Cargo.toml
crates/ui/src/components/button/: copy_button.rs
crates/util/: Cargo.toml
crates/util/src/: archive.rs  command.rs  paths.rs  process.rs  shell.rs  shell_builder_wasm.rs  util.rs
crates/vim/src/: visual.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: persistence.rs  toast_layer.rs  wasm.rs  workspace.rs  workspace_native_impl.rs
crates/worktree/src/: worktree.rs
crates/zed/: Cargo.toml
crates/zed/resources/flatpak/release-info/: preview
crates/zed/src/: main.rs  main_wasm.rs  zed.rs
crates/zeta/src/: completion_diff_element.rs
script/flatpak/: bundle-flatpak  convert-release-notes.py  deps
tooling/xtask/src/: main.rs  tasks.rs
tooling/xtask/src/tasks/: web_examples.rs  web_zed.rs
