[package]
name = "client"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/client.rs"
doctest = false

[features]
test-support = ["clock/test-support", "collections/test-support", "gpui/test-support", "rpc/test-support"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
clock.workspace = true
cloud_api_client.workspace = true
cloud_llm_client.workspace = true
collections.workspace = true
credentials_provider.workspace = true
derive_more.workspace = true
feature_flags.workspace = true
futures.workspace = true
getrandom = { version = "0.2", features = ["js"] }
gpui.workspace = true
http_client.workspace = true
httparse = "1.10"
log.workspace = true
parking_lot.workspace = true
paths.workspace = true
postage.workspace = true
rand.workspace = true
regex.workspace = true
release_channel.workspace = true
rpc = { workspace = true, features = ["gpui"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
settings.workspace = true
sha2.workspace = true
telemetry.workspace = true
telemetry_events.workspace = true
text.workspace = true
thiserror.workspace = true
time.workspace = true
url.workspace = true
util.workspace = true
web-time.workspace = true

[dev-dependencies]
clock = { workspace = true, features = ["test-support"] }
collections = { workspace = true, features = ["test-support"] }
fs.workspace = true
gpui = { workspace = true, features = ["test-support"] }
http_client = { workspace = true, features = ["test-support"] }
rpc = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
util = { workspace = true, features = ["test-support"] }

[target.'cfg(target_os = "windows")'.dependencies]
semver.workspace = true
windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-tungstenite = { workspace = true, features = ["tokio", "tokio-rustls-manual-roots"] }
fs.workspace = true
gpui_tokio.workspace = true
http_client_tls.workspace = true
smol.workspace = true
tiny_http.workspace = true
tokio-socks.workspace = true
tokio.workspace = true
worktree.workspace = true

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tokio-native-tls = "0.3"

[target.'cfg(all(not(any(target_os = "windows", target_os = "macos")), not(target_family = "wasm")))'.dependencies]
rustls-pki-types = "1.12"
tokio-rustls = { version = "0.26", features = ["tls12", "ring"], default-features = false }
