[package]
name = "sqlez"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
collections.workspace = true
futures.workspace = true
indoc.workspace = true
log.workspace = true
parking_lot.workspace = true
sqlformat.workspace = true
util.workspace = true
uuid = { workspace = true, features = ["js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libsqlite3-sys.workspace = true
thread_local = "1.1.4"

[dev-dependencies]
smol.workspace = true
